# fluffy-octo-telegram

./: .gitignore  404.html  Dockerfile  Jenkinsfile  LICENSE  README.md  db.sqlite3  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: vets.yml
api/: tests.py  views.py
application/: db.sqlite3  requirements.txt  vets_bootstrap.sh
application/api/: views.py
application/djangorestapi/: settings-k8s.py  settings.py  urls.py
application/snippets/: tests.py  urls.py
application/vets/: admin.py  models.py  urls.py  views.py
architecture/: index.html
architecture/application/: index.html
architecture/ci/: index.html
architecture/infrastructure/: index.html
build-descriptors/vets/: events.yaml  workflow-templates.yaml  workflow.yaml  workflows.yaml
deploy-descriptors/: application.yaml  argocd-applications.yaml  argocd-project.yaml  deployment.yaml  service.yaml
deploy-descriptors/application/: Chart.yaml  values-dev.yaml  values-prod.yaml
deploy-descriptors/cluster/: apps.yaml  argocd.yaml
deploy-descriptors/vets/: argocd-project.yaml  argocd.yaml
development/: index.html
development/setup/: index.html
djangorestapi/: settings.py  urls.py
docs/: index.md
docs/architecture/: application.md  index.md
docs/development/: index.md  prerequisites.md  setup.md
docs/operations/: index.md
mysite/api/: tests.py  views.py
mysite/mysite/: urls.py  (+1 more)
operations/: index.html
search/: search_index.json
snippets/: views.py
src/: vets_bootstrap.sh
terraform/: .gitignore
vets/: serializers.py  views.py
(+53 files in other folders)
